--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -50,12 +50,13 @@ a:hover, a:active {
 }
 
 #menu li {
-  padding-left: 1%;
   display: inline-block;
 }
 
 nav {
   display: inline;
+  position:absolute;
+  right:7%;
 }
 
 #post-list {
