--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -72,3 +72,15 @@ nav {
 #date {
   display:inline-block;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+}
+
+th {
+  text-align: left;
+}
